--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 }
 
 .project__button {
-    margin: 0 5px;
+    margin: 5px 5px;
     text-transform: none;
     letter-spacing: inherit;
     height: 30px;
@@ -13,6 +13,12 @@
     padding-left: 10px;
     padding-right: 10px;
     box-shadow: inset 0 0 0 1px #585858;
+}
+
+@media only screen and (max-width: 560px) {
+    .project__button {
+        width: 100%;
+    }
 }
 
 .project__share_link {
@@ -37,4 +43,8 @@
 .project__share_link input[type="text"].project__share_link_url {
     width: 500px;
     max-width: 100%;
+}
+
+input[type="text"] {
+    margin: 0 8px;
 }
